# DicomProcTools

./: .gitignore  README.md  gen_reqs.sh  pyproject.toml  reqs.txt
A3IDicomTools/: DicomExtract.py  ImageExtractor.py  configs.py
A3IDicomTools/example_configs/: debug_tomo_mammo.json  example_config_CT&MR.json  example_config_Others.json
A3IDicomTools/extractors/: CTMRIExtractor.py  GeneralExtractor.py  PngExtractor.py  TomoExtractor.py  __init__.py  extractUtils.py  functional_extractors.py
A3IDicomTools/help_data/: uid_categories.py
A3IDicomTools/utils/: helpers.py
tests/: simple_test.py
tests/test_data/: bad_config.json  example_config.json
