
[build-system]
requires = ["setuptools>=61.0",
"numpy==1.26.4",
"pydicom==2.4.4",
"python-gdcm==3.0.23.1",
"nibabel==5.2.1",
"tqdm==4.65.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "A3IDicomTools"
version = "0.1"
authors = [
  { name="Ramon Correa", email="rlcorrea@asu.edu" },
]
description = "A pacakge for extraction dicom metadata and converting images to other formats"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
