
[build-system]
requires = ["setuptools>=61.0",
"pydicom==3.0.1",
"nibabel==5.2.1",
"dicom2nifti==2.6.0"
]
build-backend = "setuptools.build_meta"

[project]
name = "A3IDicomTools"
version = "0.2"
authors = [
  { name="Ramon Correa", email="rlcorrea@asu.edu" },
]
description = "A pacakge for extraction dicom metadata and converting images to other formats"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
