
[build-system]
requires = ["setuptools>=61.0",
"pydicom==3.0.1",
"nibabel==5.2.1",
"dicom2nifti==2.6.0"
]
build-backend = "setuptools.build_meta"

[project]
name = "A3IDicomTools"
version = "0.2"
authors = [
  { name="Ramon Correa", email="rlcorrea@asu.edu" },
]
description = "A pacakge for extraction dicom metadata and converting images to other formats"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "astroid==3.3.9",
    "asttokens==3.0.0",
    "comm==0.2.2",
    "contourpy==1.3.1",
    "cycler==0.12.1",
    "debugpy==1.8.13",
    "decorator==5.2.1",
    "dicom2nifti==2.6.0",
    "dill==0.3.9",
    "executing==2.2.0",
    "fonttools==4.56.0",
    "iniconfig==2.1.0",
    "ipykernel==6.29.5",
    "ipython>=9.0.2",
    "ipython-pygments-lexers==1.1.1",
    "isort==6.0.1",
    "jedi==0.19.2",
    "jupyter-client==8.6.3",
    "jupyter-core==5.7.2",
    "kiwisolver==1.4.8",
    "matplotlib==3.10.1",
    "matplotlib-inline==0.1.7",
    "mccabe==0.7.0",
    "nest-asyncio==1.6.0",
    "nibabel==5.2.1",
    "numpy==1.26.4",
    "packaging==24.2",
    "pandas==2.2.3",
    "parso==0.8.4",
    "pexpect==4.9.0",
    "pillow==11.1.0",
    "pip==25.0",
    "platformdirs==4.3.7",
    "pluggy==1.5.0",
    "prompt-toolkit==3.0.50",
    "psutil==7.0.0",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "pydicom==3.0.1",
    "pygments==2.19.1",
    "pylint==3.3.6",
    "pyparsing==3.2.3",
    "pypng==0.20220715.0",
    "pytest==8.3.5",
    "python-dateutil==2.9.0.post0",
    "python-gdcm==3.0.23.1",
    "pytz==2025.2",
    "pyzmq==26.3.0",
    "ruff==0.11.3",
    "scipy==1.15.2",
    "setuptools==75.8.0",
    "six==1.17.0",
    "stack-data==0.6.3",
    "tomlkit==0.13.2",
    "tornado==6.4.2",
    "tqdm==4.65.0",
    "traitlets==5.14.3",
    "typing-extensions==4.13.0",
    "tzdata==2025.2",
    "wcwidth==0.2.13",
    "wheel==0.45.1",
]

[tool.setuptools.packages.find]
include = ["A3IDicomTools*"]
exclude = ["docs*", "ruff_out*","tests*"]
